// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor should rendered correctly 1`] = `
<a
  className="container uui-anchor uui-enabled -clickable"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  tabIndex={0}
>
  Test Anchor
</a>
`;

exports[`Anchor should rendered with props correctly 1`] = `
<a
  aria-disabled={true}
  className="container uui-anchor uui-disabled -clickable"
  disabled={true}
  href="https://uui.epam.com"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="link"
  tabIndex={-1}
>
  Test Anchor
</a>
`;
